# rhubarb-lip-sync-wasm

./: .gitattributes  .gitignore  .npmignore  CMakeLists.txt  LICENSE  README.md  jest.config.ts  package.json  tsconfig.json
scripts/: install_dependencies.sh
src/__tests__/: rhubarb.test.ts  setup.ts  wasm-loader.test.ts
src/__tests__/__mocks__/: wasm-mock.ts
src/cpp/: CMakeLists.txt  appInfo.cpp  preinclude.h  rhubarb_wasm.cpp
src/cpp/rhubarb/lib/sphinxbase-rev13216/include/: config.h
src/cpp/rhubarb/lib/sphinxbase-rev13216/src/libsphinxbase/util/: profile.c
src/cpp/rhubarb/lib/sphinxbase/include/: sphinx_config.h
src/cpp/rhubarb/src/audio/: BufferAudioClip.h
src/cpp/rhubarb/src/tools/: platformTools.cpp
src/typescript/: index.ts  rhubarb-wasm.d.ts  rhubarb_wasm.d.ts  types.ts  wasm-loader.d.ts  wasm-loader.ts
src/typescript/__mocks__/: rhubarb_wasm.ts
